Make fields of ComponentFacet private final